css/emm.css
/*
Copyright © 2013 Code for the People Ltd

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

*/

.media-frame .emm-content {
	background: #fff;
}

.media-frame .emm-content .emm-error {
	background: #fdd;
	padding: 12px 16px;
	margin: 0 0 10px 0;
	bottom: auto;
	display: none;
}

.media-frame .emm-content .emm-empty {
	background: #ffd;
	padding: 12px 16px;
	margin: 0 0 10px 0;
	bottom: auto;
	display: none;
}

.media-frame .emm-content .emm-toolbar {
	background: #f5f5f5;
	padding: 0;
	right: 0;
}
body.mp6 .media-frame .emm-content .emm-toolbar {
	background: #fff;
	border-bottom: 1px solid #ddd;
}

/* The below can be removed when MP6 hits 1.6 */
/* http://wordpress.org/support/topic/cssmedia-viewscss-references-a-non-existent-image */
body.mp6 .media-frame .emm-content .spinner {
	background-image: url( '../assets/wpspin_light.gif' );
}

.media-frame .emm-content .emm-toolbar-container {
	padding: 10px 9px;
}

.media-frame .emm-content .attachments {
	right: 0;
}

.media-frame .emm-content .emm-toolbar label,
.media-frame .emm-content .emm-toolbar select,
.media-frame .emm-content .emm-toolbar input {
	float: left;
}

/* WP media manager style tweaks: */
.media-frame .emm-content .emm-toolbar label{
	margin: 7px;
	color: #555;
}
.media-frame .emm-content .emm-toolbar select {
	margin: 1px;
	padding: 6px 6px 5px;
	height: 2.5em;
}
.media-frame .emm-content .emm-toolbar .button {
	margin: 1px;
}

.media-frame .emm-content .emm-toolbar .spinner {
	float: left;
	margin: 7px 10px;
}

.media-frame .emm-content .emm-pagination .spinner {
	float: left;
	margin: 3px 10px;
}

.media-frame .emm-content .emm-pagination {
	display: none;
	padding: 10px;
}

.media-frame .emm-content .emm-pagination a {
	float: left;
}

.media-frame .emm-content .clearfix:after {
	clear: both;
	content: ".";
	display: block;
	height: 0;
	visibility: hidden;
}


/* ************************ */
/* Twitter-specific styles: */
/* ************************ */

.media-frame .emm-content-twitter .emm-item {
	float: none;
	max-width: 800px;
	text-align: left;
	margin: 6px 10px;
	border: 1px solid #ddd;
	cursor: pointer;
}

.media-frame .emm-content-twitter .emm-item:hover {
	border-color: #999;
}

.media-frame .emm-content-twitter .emm-item.selected {
	border-color: transparent;
}
html.ie8 .media-frame .emm-content-twitter .emm-item.selected {
	border-color: #999;
}

.media-frame .emm-content-twitter .emm-item .emm-item-container {
	padding: 13px;
}

.media-frame .emm-content-twitter .emm-item .emm-item-thumb {
	float: left;
	margin: 0 10px 10px 0;
}

.media-frame .emm-content-twitter .emm-item .emm-item-thumb img {
	width: 48px;
	height: 48px;
}

.media-frame .emm-content-twitter .emm-item .emm-item-author {
	font-size: 18px;
}

.media-frame .emm-content-twitter .emm-item .emm-item-author-screen-name {
	color: #bbb;
}

.media-frame .emm-content-twitter .emm-item .emm-item-content {
	margin: 8px 0;
}

.media-frame .emm-content-twitter .emm-item .emm-item-date {
	color: #bbb;
	clear: left;
}

.media-frame .emm-content-twitter-location .emm-toolbar {
	height: 210px;
}

.media-frame .emm-content-twitter-location .attachments {
	top: 210px;
}

#emm_twitter_map_canvas {
	width: 100%;
	height: 160px;
	background: transparent no-repeat center center;
}

/* ************************ */
/* Youtube-specific styles: */
/* ************************ */
.emm-item-youtube .emm-item-content {
    width: 320px;
	font-weight: bold;
}

.emm-item-thumb img {
	width: 320px;
	height: 180px;
}

.emm-items {
	padding-top: 15px;
}

